--- a/xzarsk03-contracts-for-concurrency.tex
+++ b/xzarsk03-contracts-for-concurrency.tex
@@ -149,10 +149,10 @@
   concurrency, RoadRunner, instrumentation, Java Bytecode, concurrent
   programming},
   % Abstrakt / Abstract
-  abstract.cs={Kontrakty pro paralelismus slouží k vyjádření potřebné atomicity
+  abstract.cs={Kontrakty pro paralelismus slouží k~vyjádření potřebné atomicity
   sekvencí metod ve vícevláknových programech. Tato práce se zaměřuje na
-  implementaci dynamického analyzátoru, který bude verifikovat programy napsané
-  v jazyce Java vůči kontraktům. Analyzátor podporuje parametrické kontrakty se
+  implementaci dynamického analyzátoru, který verifikuje programy napsané
+  v~jazyce Java vůči kontraktům. Podporovány jsou parametrické kontrakty se
   spoilery. Analyzátor je implementován jako rozšíření frameworku RoadRunner. V
   rámci implementace analyzátoru byla do frameworku RoadRunner přidána podpora
   pro získávání argumentů metod a jejich návratových hodnot. Analyzátor byl plně
@@ -162,8 +162,8 @@
   verify programs written in Java against contracts for concurrency. The
   analyzer was designed to detect violations of parametric contracts with
   spoilers. The proposed analyzer was implemented as an extension to the
-  RoadRunner framework. As a part of the solution, support for accessing the
-  method arguments and return values was added to RoadRunner. The analyzer was
+  RoadRunner framework. Support for accessing the method arguments and return
+  values was added to RoadRunner as a part of the solution. The analyzer was
   fully implemented and verified on a set of testing programs.},
   declaration={I hereby declare that this term project was prepared as an
   original work by the author under the supervision of Ing. Aleš Smrčka, Ph.D.
